Update Open API spec
